# PhotoExplorer

./: .gitignore  FaceDatabaseManager.h  FaceListItemDelegate.h  embeddingUtils.h  faceindexer.cpp  mainWindow.cpp  mainWindow.h
Backup/: CMakeLists.txt  faceindexer.cpp  faceindexer.h  mainWindow.cpp  mainWindow.h
Backup/1 June/: CMakeLists.txt  FaceDatabaseManager.cpp  FaceTypes.h  faceindexer.h  mainWindow.h
Backup/27 May/: CMakeLists.txt  faceindexer.cpp  faceindexer.h  mainWindow.cpp  mainWindow.h
Backup/27 May - 3 working/: faceDetector.cpp  faceDetector.h  mainWindow.cpp  mainWindow.h
Backup/27 May 2/: faceindexer.cpp  faceindexer.h  mainWindow.cpp  mainWindow.h
Backup/28 May/: mainWindow.cpp
Backup/28 May 2/: CMakeLists.txt  mainWindow.cpp
Backup/28 May 3/: FaceListItemDelegate.cpp  mainWindow.cpp  mainWindow.h
Backup/28 May 4/: FaceListItemDelegate.h  faceindexer.cpp  mainWindow.cpp
Backup/29 May/: CMakeLists.txt  FaceListItemDelegate.cpp  mainWindow.cpp  mainWindow.h
Backup/29 May 2/: faceDetector.cpp  faceindexer.h
Backup/29 May 3 SQL/: FaceDatabaseManager.cpp  FaceDatabaseManager.h  faceindexer.cpp  mainWindow.cpp  mainWindow.h  roadmap.txt
Backup/29 May 4/: CMakeLists.txt  FaceDatabaseManager.cpp  FaceListItemDelegate.cpp  FaceListItemDelegate.h  faceDetector.h  faceindexer.h  mainWindow.cpp
Backup/30 May Fine version/: FaceDatabaseManager.cpp  FaceDatabaseManager.h  mainWindow.cpp  mainWindow.h
Backup/30 May not working/: CMakeLists.txt  FaceDatabaseManager.cpp  FaceDatabaseManager.h  mainWindow.cpp  scanworker.h
